# glow

./: .clang-format  .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/bundles/: CMakeLists.txt
examples/bundles/dlha/: CMakeLists.txt  main.cpp
examples/bundles/resnet50/: main.cpp
include/glow/Base/: Type.h
lib/Backends/CPU/: CMakeLists.txt
lib/Backends/CPU/libjit/: cc.c  cc.h  example.c  example.h  libjit_conv.cpp  libjit_defs.h  utility.h
lib/Backends/CPU/libjit/dlha/: CMakeLists.txt  cc.cpp  cc.h  example.cpp  utility.cpp
lib/Importer/: ONNXModelLoader.cpp
